--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -94,7 +94,7 @@ jobs:
           run: |
             python -m pip install --upgrade pip
             pip uninstall eth-ape --yes
-            pip install .[test]
+            pip install .[test,doc]
 
         - name: Run Tests
           run: pytest -m "not fuzzing" -s --cov=src -n auto --dist loadgroup
