fix: move doctest back to docs workflow

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -94,22 +94,10 @@ jobs:
           run: |
             python -m pip install --upgrade pip
             pip uninstall eth-ape --yes
-            pip install .[test,doc]
+            pip install .[test]
 
         - name: Run Tests
           run: pytest -m "not fuzzing" -s --cov=src -n auto --dist loadgroup
-
-        - name: Doctesting
-          run: |
-            python build_docs.py
-            sphinx-build -b doctest docs docs/_build/doctest
-            if grep -q '0 failed' docs/_build/doctest/output.txt; then
-              echo "All doctests passed!"
-            else
-              echo "Some doctests failed. See the output below."
-              cat docs/_build/doctest/output.txt
-              exit 1
-            fi
 
     fuzzing:
         runs-on: ubuntu-latest
