--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -62,9 +62,7 @@ jobs:
 
         strategy:
             matrix:
-                # TODO: Replace with macos-latest when works again.
-                #   https://github.com/actions/setup-python/issues/808
-                os: [ubuntu-latest, macos-12]   # eventually add `windows-latest`
+                os: [ubuntu-latest, macos-latest]   # eventually add `windows-latest`
                 python-version: [3.9, "3.10", "3.11", "3.12"]
 
         env:
@@ -86,7 +84,9 @@ jobs:
             go-version: '^1.20.7'
 
         - name: Install Geth
-          uses: gacts/install-geth-tools@v1
+          # TODO: use `gacts/install-geth-tools@v1` once
+          #   https://github.com/gacts/install-geth-tools/pull/68 merges.
+          uses: antazoey/install-geth-tools@feat/macos-arm
           with:
             version: 1.13.11
 
