--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -39,6 +39,6 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags ${{ env.Registry }}/apeworx/ape:latest
+          tags: ${{ env.Registry }}/apeworx/ape:latest
 
 
