fix: slim_image arg

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -62,4 +62,4 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           build-args: |
-            SLIM_IMAGE=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.meta.outputs.tags }}-slim
+            SLIM_IMAGE=${{ steps.meta.outputs.tags }}-slim
