--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -26,6 +26,9 @@ jobs:
         with:
           fetch-tags: 'true'
 
+      - name: PRINT GIT TAG
+        run: git tag
+
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@v5
@@ -36,6 +39,9 @@ jobs:
             type=ref,event=pr
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
+
+      - name: PRINT METADATA TAGS
+        run: echo "TAGS: ${{ steps.meta.outputs.tags }}"
 
       - name: Log into GitHub Container Registry
         if: github.event_name != 'pull_request'
