--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -32,10 +32,16 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
-            type=ref,event=branch
-            type=ref,event=pr
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
+            type=ref,event=branch,branch=main,latest=true
+            type=ref,event=branch,branch=main
+            type=ref,event=branch,branch!=main
+            type=semver,pattern={{version}},branch=main,latest=false
+            type=ref,event=tag
+
+      - name: Show tags
+        run: |
+          git tag
+          echo ${{ steps.meta.outputs.tags }}
 
       - name: Log into GitHub Container Registry
         if: github.event_name != 'pull_request'
