--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -62,7 +62,7 @@ jobs:
           build-args: |
             VERSION=${{ version }}
             BUILD_DATE=$(date -u +"%Y-%m-%dT%H:%M:%SZ")
-            VCS_REF=$(git rev-parse --short HEAD)
+            VCS_REF={{ github.sha }}
 
       - name: Build and push
         uses: docker/build-push-action@v4
