fix: incorrect tags in build

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -34,10 +34,10 @@ jobs:
           tags: |
             type=ref,event=pr
             type=ref,event=branch,branch=main,latest=true
-            type=ref,event=branch,branch=main
+            type=ref,event=branch,branch=main,tag=latest
             type=ref,event=branch,branch!=main
-            type=semver,pattern={{version}},branch=main,latest=false
-            type=ref,event=tag
+            type=semver,pattern={{version}},branch=main,latest=false,tag=stable
+            type=ref,event=tag,tag={{ tag }}
 
       - name: Show tags
         run: |
