--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -32,12 +32,10 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
-            type=ref,event=pr
-            type=ref,event=branch,branch=main,latest=true
-            type=ref,event=branch,branch=main
-            type=ref,event=branch,branch!=main
-            type=semver,pattern={{version}},branch=main,latest=false
+            type=raw,value=latest,enable=${{ github.ref == 'refs/heads/main' }}
             type=ref,event=tag
+            type=raw,value=stable,enable=${{ startsWith(github.ref, 'refs/tags/') }}
+            type=ref,event=pr
 
       - name: Show tags
         run: |
@@ -61,6 +59,7 @@ jobs:
         with:
           context: .
           file: ./Dockerfile.slim
+          push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}-slim
           labels: ${{ steps.meta.outputs.labels }}
           build-args: |
