--- a/.github/workflows/retention.yaml
+++ b/.github/workflows/retention.yaml
@@ -9,15 +9,18 @@ env:
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-  clean:
+  retention:
     name: Delete package versions
     runs-on: ubuntu-latest
     steps:
-      - uses: snok/container-retention-policy@v3
+      - name: Retain specific versions
+        uses: snok/container-retention-policy@v3
         with: 
           account: ApeWorX
           token: ${{ secrets.GITHUB_TOKEN }}
           image-names: "ape"
-          image-tags: "!stable* !latest* !v0.7* !v0.8*"
-          cut-off: 4w
+          keep-tag-names: |
+            stable
+            latest
+          keep-minimum-versions: 2
           dry-run: true
