--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -82,17 +82,18 @@ jobs:
           # Get all tags in the format X.Y.Z and sort them
           tags=$(git tag -l --sort=-v:refname | grep -E '^[0-9]+\.[0-9]+\.[0-9]+$')
           
-          # Extract the last two minor versions and get the latest patch for each
-          latest_two_minors=$(echo "$tags" | awk -F. '{print $1"."$2}' | uniq | head -n 2)
+          # Extract the last two minor versions
+          latest_two_minors=$(echo "$tags" | awk -F. '{print $1"."$2}' | uniq -u | head -n 2)
           
           keep_tags=""
           for minor in $latest_two_minors; do
-            latest_patch=$(echo "$tags" | grep "^$minor" | head -n 1)
+            latest_patch=$(echo "$tags" | grep "^$minor" | sort -V | tail -n 1)
             keep_tags="$keep_tags $latest_patch"
           done
           
           echo "keep_tags=$(echo $keep_tags | tr ' ' '\n' | paste -sd ',' -)" >> $GITHUB_ENV
           echo "Tags to keep: $keep_tags"
+
       - name: Run container retention policy
         if: github.ref == 'refs/heads/main'
         uses: snok/container-retention-policy@v3.0.0
