fix: grabbing the latest two minor versions

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -97,14 +97,14 @@ jobs:
           
           # Extract the last two unique minor versions
           echo "Extracting the last two minor versions..."
-          latest_two_minors=$(echo "$tags" | awk -F. '{print $1"."$2}' | uniq | tail -n 2)
+          latest_two_minors=$(echo "$all_tags" | tr ' ' '\n' | grep -E '^v[0-9]+\.[0-9]+\.[0-9]+$' | awk -F. '{print $1"."$2}' | sed 's/v//' | uniq | tail -n 2)
           echo "Last two minor versions:"
           echo "$latest_two_minors"
           
           keep_tags=""
           for minor in $latest_two_minors; do
             echo "Processing minor version: $minor"
-            latest_patch=$(echo "$tags" | grep "^$minor" | sort -V | tail -n 1)
+            latest_patch=$(echo "$all_tags" | tr ' ' '\n' | grep "^v$minor" | sort -V | tail -n 1)
             echo "Latest patch for $minor: $latest_patch"
             keep_tags="$keep_tags $latest_patch"
           done
@@ -113,6 +113,7 @@ jobs:
           keep_tags=$(echo $keep_tags | tr ' ' '\n' | paste -sd ',' -)
           echo "Tags to keep: $keep_tags"
           echo "keep_tags=$keep_tags"
+          echo "keep_tags=$keep_tags" >> $GITHUB_ENV
 
       - name: Run container retention policy
         if: github.ref == 'refs/heads/main'
