--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -118,6 +118,7 @@ jobs:
         if: github.ref == 'refs/heads/main'
         uses: snok/container-retention-policy@v3.0.0
         with:
+          account: ApeWorX
           token: ${{ secrets.GITHUB_TOKEN }}
           image-tags: "!stable* !latest* !${{ env.keep_tags }}"
           tag-selection: both
