--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -115,7 +115,7 @@ jobs:
           echo "keep_tags=$keep_tags"
 
       - name: Run container retention policy
-        if: github.ref == 'refs/heads/main'
+        # if: github.ref == 'refs/heads/main'
         uses: snok/container-retention-policy@v3.0.0
         with:
           account: ApeWorX
