--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -36,6 +36,7 @@ body:
       required: true
   - type: textarea
     attributes:
+      label: Ape Configuration
       value: |
         ### ape-config.yaml file
 
