--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -37,7 +37,7 @@ body:
   - type: textarea
     attributes:
       label: Ape Configuration
-      value: |
+      placeholder: |
         ### ape-config.yaml file
 
         Paste your ape-config.yaml content in the following section
