chore: lint fix

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,7 @@ force_grid_wrap = 0
 include_trailing_comma = true
 multi_line_output = 3
 use_parentheses = true
+skip = ["version.py"]
 
 [tool.mdformat]
 number = true
