--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -91,14 +91,15 @@ jobs:
             pip uninstall eth-ape --yes
             pip install .[test]
 
-        - name: Run Functional Tests
-          run: ape test tests/functional -m "not fuzzing" -s --cov=src --cov-append -n auto --dist loadgroup
+#        - name: Run Functional Tests
+#          run: ape test tests/functional -m "not fuzzing" -s --cov=src --cov-append -n auto --dist loadgroup
 
+        # TODO: Undo - debugging
         - name: Run Integration Tests
-          run: ape test tests/integration -m "not fuzzing" -s --cov=src --cov-append -n auto --dist loadgroup
+          run: ape test tests/integration/cli/test_test.py -m "not fuzzing" -s --cov=src --cov-append -n auto --dist loadgroup
 
-        - name: Run Performance Tests
-          run: ape test tests/performance -s
+#        - name: Run Performance Tests
+#          run: ape test tests/performance -s
 
     fuzzing:
         runs-on: ubuntu-latest
