--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,20 +4,30 @@ repos:
     hooks:
     -   id: check-yaml
 
--   repo: https://github.com/psf/black
-    rev: 24.10.0
+-   repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.10.0  # Latest ruff version
     hooks:
-    -   id: black
-        name: black
+    -   id: ruff
+        args: [--fix, --exit-non-zero-on-fix]
+    -   id: ruff-format
 
 -   repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.13.0
+    rev: v1.15.0
     hooks:
     -   id: mypy
-        additional_dependencies: [types-PyYAML, types-requests, pydantic, types-setuptools]
+        additional_dependencies: [
+                pydantic,
+                pandas-stubs,
+                types-python-dateutil,
+                types-PyYAML,
+                types-requests,
+                types-setuptools,
+                types-SQLAlchemy,
+                types-toml
+        ]
 
 -   repo: https://github.com/executablebooks/mdformat
-    rev: 0.7.18
+    rev: 0.7.22
     hooks:
     -   id: mdformat
         additional_dependencies: [mdformat-gfm, mdformat-frontmatter, mdformat-pyproject]
