--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -90,12 +90,9 @@ jobs:
             version: 1.15.6
 
         - name: Setup Ape
-          uses: ApeWorX/github-action@v3
-
-        - name: Install Dependencies
-          run: |
-            python -m pip install --upgrade pip
-            pip install .[test]
+          uses: ApeWorX/github-action@feat/path-extras
+          with:
+            ape-version-pin: .[test]
 
         - name: Run Functional Tests
           run: ape test tests/functional -m "not fuzzing" -s --cov=src --cov-append -v ERROR -n auto --dist loadgroup
