--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -79,15 +79,8 @@ jobs:
           with:
               python-version: ${{ matrix.python-version }}
 
-        - name: Setup Go
-          uses: actions/setup-go@v5
-          with:
-            go-version: '^1.20.7'
-
         - name: Install Geth
-          uses: gacts/install-geth-tools@v1
-          with:
-            version: 1.15.6
+          uses: ApeWorX/geth-action@v1
 
         - name: Setup Ape
           uses: ApeWorX/github-action@v3
