--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -88,10 +88,10 @@ jobs:
             ape-version-pin: .[test]
 
         - name: Run Functional Tests
-          run: ape test tests/functional -m "not fuzzing" -s --cov=src --cov-append -v ERROR -n auto --dist loadgroup
+          run: ape test tests/functional -m "not hypothesis" -s --cov=src --cov-append -v ERROR -n auto --dist loadgroup
 
         - name: Run Integration Tests
-          run: ape test tests/integration -m "not fuzzing" -s --cov=src --cov-append -v ERROR -n auto --dist loadgroup
+          run: ape test tests/integration -m "not hypothesis" -s --cov=src --cov-append -v ERROR -n auto --dist loadgroup
 
         - name: Run Performance Tests
           run: ape test tests/performance -s -v ERROR
@@ -118,4 +118,4 @@ jobs:
             pip install .[test]
 
         - name: Run Tests
-          run: ape test -m "fuzzing" --no-cov -s
+          run: ape test -m "hypothesis" --no-cov -s
