--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -120,7 +120,9 @@ jobs:
 
       - name: Run container retention policy
         if: github.ref == 'refs/heads/main'
-        uses: snok/container-retention-policy@v3
+        # TODO: Use `v3` when available:w
+        
+        uses: snok/container-retention-policy@v3.0.1
         with:
           account: ApeWorX
           token: ${{ secrets.GITHUB_TOKEN }}
