--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -26,14 +26,12 @@ jobs:
     - uses: actions/checkout@v5
 
     - name: Setup Python
-      uses: actions/setup-python@v5
+      uses: astral-sh/setup-uv@v7
       with:
         python-version: "3.10"
 
     - name: Install Dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install .[doc]
+      run: uv sync --group docs
 
     - name: Ape Docs
       uses: apeworx/sphinx-ape@main
