--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -6,27 +6,16 @@ on:
 
 jobs:
   deploy:
-
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
 
     steps:
     - uses: actions/checkout@v5
+    - uses: astral-sh/setup-uv@v7
 
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: "3.10"
+    - name: Build Package
+      run: uv build
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -e .[release]
-
-    - name: Build
-      run: python setup.py sdist bdist_wheel
-
-    - name: Publish
-      env:
-        TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
-        TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
-      run: twine upload dist/*
+    - name: Publish Package
+      uses: pypa/gh-action-pypi-publish@release/v1
