fix(CI): try to get build to work

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,4 +1,5 @@
 name: Container Images
+
 on:
   push:
     branches:
@@ -27,7 +28,7 @@ jobs:
         python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
 
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v5
         with:
           fetch-depth: 0  # Needed for setuptools-scm
@@ -48,15 +49,18 @@ jobs:
             echo "value=false" >> $GITHUB_OUTPUT
           fi
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Log into GitHub Container Registry
         if: github.event_name != 'pull_request'
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Extract metadata (tags, labels) for slim image
+      - name: Generate Docker metadata (slim)
         id: meta-slim
         uses: docker/metadata-action@v5
         with:
@@ -86,7 +90,7 @@ jobs:
             type=ref,event=pr,prefix=python${{ matrix.python-version }}-pr-
           labels: |
             org.opencontainers.image.title=ape
-            org.opencontainers.image.description=Ape Framework: Build and explore on-chain with Python
+            org.opencontainers.image.description="Ape Framework: Build and explore on-chain with Python"
             org.opencontainers.image.url=https://apeworx.io/framework
             org.opencontainers.image.documentation=https://docs.apeworx.io/ape/stable/userguides/quickstart
             org.opencontainers.image.source=https://github.com/ApeWorX/ape
@@ -97,7 +101,7 @@ jobs:
             org.opencontainers.image.authors=ApeWorX LTD
             org.opencontainers.image.base.name=python:${{ matrix.python-version }}-slim
 
-      - name: Build and push (if required) slim
+      - name: Build and push (if required) slim image
         id: build-slim
         uses: docker/build-push-action@v6
         with:
@@ -107,11 +111,25 @@ jobs:
             PYTHON_VERSION=${{ matrix.python-version }}
             APE_VERSION=${{ steps.version.outputs.version }}
           push: ${{ github.event_name != 'pull_request' }}
+          load: ${{ github.event_name == 'pull_request' }}
           tags: ${{ steps.meta-slim.outputs.tags }}
           labels: ${{ steps.meta-slim.outputs.labels }}
           cache-from: type=gha,scope=slim-py${{ matrix.python-version }}
-          cache-to: type=gha,mode=max,scope=slim-py${{ matrix.python-version }}
-          platforms: linux/amd64,linux/arm64
+          cache-to: ${{ github.event_name != 'pull_request' && format('type=gha,mode=max,scope=slim-py{0}', matrix.python-version) || '' }}
+          platforms: ${{ github.event_name != 'pull_request' && 'linux/amd64,linux/arm64' || 'linux/amd64' }}
+
+      # For PRs, we need to use the local image tag instead of the registry digest
+      - name: Determine slim image reference
+        id: slim-ref
+        run: |
+          if [[ "${{ github.event_name }}" == "pull_request" ]]; then
+            # Use first tag from metadata for local reference
+            FIRST_TAG=$(echo "${{ steps.meta-slim.outputs.tags }}" | head -n1)
+            echo "image=$FIRST_TAG" >> $GITHUB_OUTPUT
+          else
+            # Use registry digest for pushed images
+            echo "image=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}@${{ steps.build-slim.outputs.digest }}" >> $GITHUB_OUTPUT
+          fi
 
       - name: Generate Docker metadata (full)
         id: meta-full
@@ -142,7 +160,7 @@ jobs:
             type=ref,event=pr,prefix=python${{ matrix.python-version }}-pr-
           labels: |
             org.opencontainers.image.title=ape
-            org.opencontainers.image.description=Ape Framework: Build and explore on-chain with Python (with recommended plugins)
+            org.opencontainers.image.description="Ape Framework: Build and explore on-chain with Python (with recommended plugins)"
             org.opencontainers.image.url=https://apeworx.io/framework
             org.opencontainers.image.documentation=https://docs.apeworx.io/ape/stable/userguides/quickstart
             org.opencontainers.image.source=https://github.com/ApeWorX/ape
@@ -160,13 +178,14 @@ jobs:
           context: .
           file: ./Dockerfile
           build-args: |
-            SLIM_IMAGE=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}@${{ steps.build-slim.outputs.digest }}
+            SLIM_IMAGE=${{ steps.slim-ref.outputs.image }}
           push: ${{ github.event_name != 'pull_request' }}
+          load: ${{ github.event_name == 'pull_request' }}
           tags: ${{ steps.meta-full.outputs.tags }}
           labels: ${{ steps.meta-full.outputs.labels }}
           cache-from: type=gha,scope=full-py${{ matrix.python-version }}
-          cache-to: type=gha,mode=max,scope=full-py${{ matrix.python-version }}
-          platforms: linux/amd64,linux/arm64
+          cache-to: ${{ github.event_name != 'pull_request' && format('type=gha,mode=max,scope=full-py{0}', matrix.python-version) || '' }}
+          platforms: ${{ github.event_name != 'pull_request' && 'linux/amd64,linux/arm64' || 'linux/amd64' }}
 
       - name: Summary
         run: |
